--- a/src/main/resources/views/PantallaModelo.fxml
+++ b/src/main/resources/views/PantallaModelo.fxml
@@ -56,7 +56,7 @@
                <children>
                   <HBox alignment="TOP_RIGHT" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
                      <children>
-                        <VBox alignment="CENTER_RIGHT" spacing="15.0">
+                        <VBox alignment="CENTER_RIGHT" spacing="10.0">
                            <children>
                               <Label fx:id="lblUserName1" alignment="CENTER_RIGHT" contentDisplay="RIGHT" onDragDetected="#usernamePressed" text="User1234" textAlignment="RIGHT" textFill="WHITE">
                                  <font>
@@ -81,13 +81,16 @@
                                  </children>
                               </HBox>
                            </children>
+                           <HBox.margin>
+                              <Insets bottom="5.0" top="5.0" />
+                           </HBox.margin>
                         </VBox>
                         <ImageView fx:id="imgUser" fitHeight="75.0" fitWidth="75.0" nodeOrientation="INHERIT" onDragDetected="#imgUserPressed" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../../resources/images/user.png" />
                            </image>
                            <HBox.margin>
-                              <Insets right="20.0" />
+                              <Insets left="5.0" right="20.0" />
                            </HBox.margin>
                         </ImageView>
                      </children>
